--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 </body>
      <footer button class="btn"</button>
            
-        <a href="https://github.com/professor-rafael" target="_blank" rel="noopener noreferrer">
+        
+            <a href="" target="_blank" rel="noopener noreferrer">
             <img src="github.png"></img>
             <p>Github</p>
         <a href="https://www.youtube.com/channel/UCBRq6fO_-P6yPOVbC0yZVmQ" target="_blank" rel="noopener noreferrer">
