--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RASINFORMATICA</title>
+    <title>AGRONOMIA</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.png">
 </head>
