--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal"> <span>RASINFORMATICA </span></h2>
+        <h2 class="titulo-principal"> <span>AGRONOMIA</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Formatação</button>
