--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="botoes">
                 <button class="botao ativo">Drone</button>
                 <button class="botao">Maquinas</button>
-                <button class="botao">Criação de pendrive bootavel</button>
+                <button class="botao">Agrotécnico</button>
                 <button class="botao">Atualização de sistema</button>
             </div>
             <div class="abas-textos">
