--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Drone</button>
-                <button class="botao">Maquinas</button>
+                <button class="botao">Máquinas</button>
                 <button class="botao">Agrotécnico</button>
                 <button class="botao">Atualização de sistema</button>
             </div>
