--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <button class="botao ativo">Drone</button>
                 <button class="botao">Máquinas</button>
                 <button class="botao">Agrotécnico</button>
-                <button class="botao">Atualização de sistema</button>
+                <button class="botao">Operadores</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
