--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">montagens e desmontagens de pc</h3>
+                    <h3 class="aba-conteudo-titulo-principal"> Agronomia é a ciência que maneja recursos naturais, visando a produção sustentável de alimentos, fibras, biocombustíveis e outros produtos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">mão de obra especializada</h4>
                     <div class="contador">
                         <div class="contador-digito">
