--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
                     <h3 class="aba-conteudo-titulo-principal"> Agronomia é a ciência que maneja recursos naturais, visando a produção sustentável de alimentos, fibras, biocombustíveis e outros produtos</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">mão de obra especializada</h4>
+                    <h4 class="aba-conteudo-titulo-secundario">Máquinas Plantadeiras</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
